fix: panel nav button overlap

--- a/frontend/assets/css/text-viewer2.scss
+++ b/frontend/assets/css/text-viewer2.scss
@@ -102,6 +102,7 @@ main#text-viewer {
             display: inline-block;
             min-width: 0;
             background:$primary;
+            flex-basis: 100%;
             h2{
               display:block;
               color: white;
@@ -114,7 +115,7 @@ main#text-viewer {
             font-size: 13px;
             color:white;
             @include transition(all 300ms ease-in); 
-            padding: 12px 0 4px 0;
+            padding: 12px 0 8px 0;
           }
           &:hover{
             background:$primary-dark;
@@ -126,7 +127,9 @@ main#text-viewer {
           &.clone{
             display: flex;
             box-shadow: 0 1px $gray-dark, 0px -1px $gray-dark;
-            min-width: 0;
+            flex-flow: row wrap;
+            max-width: 60px;
+            z-index: 1;
           }
           button.pagination{
             text-decoration: none;
